# download-gmail-attachments

./: .gitignore  CLAUDE.md  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
docs/: PRD.md  roadmap.md
scripts/: _fileops.py  _gws.py  _manifest.py  _mime.py  download_attachments.py
test_data/: sample_attachment.json  sample_message_metadata.json
tests/: conftest.py  test_fileops.py  test_gws.py  test_integration.py  test_manifest.py  test_mime.py  test_orchestrator.py
